--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -7,6 +7,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CUSTOM_FLAGS}")
 # Write binaries to bin/
 set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
 
+file(GLOB_RECURSE SRC_FILES
+       "src/*.c"
+       "include/*.h")
+
 set(PROJECT_INCLUDE_DIR "include")
 include_directories("${PROJECT_INCLUDE_DIR}")
 
@@ -14,5 +18,6 @@ add_executable("test1"
 	test/main.c)
 
 add_executable("test2"
-        test/test.c)
+        test/test.c
+	${SRC_FILES})
 
