changement du script: valeurs récoltées sur des itérations plus longues le nombre d'itérations sont prises en parametre(50 par défaut)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -34,6 +34,7 @@ add_test("main_test"
 add_test("switch_test"
   ${EXECUTABLE_OUTPUT_PATH}/02-switch)
 
+message(STATUS "lol")
 add_test("fibo_10_test"
   ${EXECUTABLE_OUTPUT_PATH}/51-fibonacci 10)
 
