--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -34,7 +34,6 @@ add_test("main_test"
 add_test("switch_test"
   ${EXECUTABLE_OUTPUT_PATH}/02-switch)
 
-message(STATUS "lol")
 add_test("fibo_10_test"
   ${EXECUTABLE_OUTPUT_PATH}/51-fibonacci 10)
 
@@ -58,3 +57,6 @@ add_test("switch-many-join-test"
 
 add_test("fibo_10_test"
   ${EXECUTABLE_OUTPUT_PATH}/51-fibonacci 10)
+
+add_test("exit_test"
+  ${EXECUTABLE_OUTPUT_PATH}/61-exit_thread)
